gcc/testsuite/gcc.dg/torture/ifunc-7.c
/* { dg-do compile } */

static int __attribute__ ((ifunc)) foo (int);

/* { dg-error "indirect function .foo. never defined" ""  { target *-*-* } 3 } */
